# docs/swagger.json
@@ -9,7 +9,7 @@
     "paths": {
         "/article": {
             "get": {
-                "summary": "获取所有文章大纲",
+                "summary": "获取所有文章",
                 "responses": {}
             },
             "post": {
@@ -18,12 +18,6 @@
             },
             "delete": {
                 "summary": "删除文章",
-                "responses": {}
-            }
-        },
-        "/article/{id}": {
-            "get": {
-                "summary": "获取单个文章",
                 "responses": {}
             }
         },
@@ -47,30 +41,21 @@
                     "application/json"
                 ],
                 "summary": "用户登录接口",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Name",
-                        "name": "name",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "State",
-                        "name": "state",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "CreatedBy",
-                        "name": "created_by",
-                        "in": "query"
-                    }
-                ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
+                        "description": "{\"code\":200 ,\"msg\":\"ok\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "{\"code\":400,\"msg\":\"bad request\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "{\"code\":500,\"msg\":\"server error\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -88,30 +73,21 @@
                     "application/json"
                 ],
                 "summary": "用户注册接口",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Name",
-                        "name": "name",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\":200,\"data\":{},\"msg\":\"ok\"}",
+                        "description": "{\"code\":200,\"msg\":\"ok\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
-                    "404": {
-                        "description": "{\"code\":404,\"data\":{},\"msg\":\"404 not find\"}",
+                    "400": {
+                        "description": "{\"code\":400,\"msg\":\"bad request\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "{\"code\":500,\"data\":{},\"msg\":\"server error\"}",
+                        "description": "{\"code\":500,\"msg\":\"server error\"}",
                         "schema": {
                             "type": "string"
                         }
